# Tachikoma-Observatory

./: .env.template  .gitignore  MEMORY.md  PRD.md  README.md  package-lock.json  pyproject.toml  rxconfig.py
data/methodology/: scenarios.ts
data/models/: models.ts
lib/benchmark/: types.ts
lib/store/: benchmark-store.ts
observatory/: config.py  observatory.py
observatory/components/: charts.py  detail.py  kpi.py  matrix.py  panels.py  shell.py
observatory/engine/: executor.py  runner.py
observatory/llm/: client.py
observatory/models/: repo.py  tables.py
observatory/pages/: analytics.py  dashboard.py  scenarios.py  settings.py
observatory/scoring/: aggregate.py  checkers.py
observatory/state/: analytics_state.py  run_state.py  settings_state.py  structs.py
observatory/suite/: toolcall15.py
observatory/theme/: tokens.py
tests/units/: conftest.py  test_aggregate.py  test_checkers.py  test_executor.py  test_pages_compile.py  test_runner.py  test_suite.py
