[project]
name = "tachikoma-observatory"
version = "0.1.0"
description = "Personal benchmark harness and dashboard for LLM tool-calling capability"
requires-python = ">=3.13"
dependencies = [
    "reflex>=0.8.0",
    "openai>=1.60.0",
    "sqlmodel>=0.0.39",
    "alembic>=1.18.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
package = false
